--- a/styles/index.css
+++ b/styles/index.css
@@ -15,6 +15,7 @@ body{
     height: 80vh;
     border: 1px solid white;
     padding: 20px;
+    margin-top: 5%;
 }
 
 .navigation{
@@ -26,7 +27,9 @@ body{
 }
 
 .body{
-    background-color: hsla(202, 43%, 58%, 0.75);
+    background-image: url("../images/bmw\ bg\ image.webp");
     padding-left: 3rem;
     flex: 13;
+    background-repeat: none;
+    background-size: cover;
 }
